crates/sotf-plugins/tests/snapshots/render_plan_snapshots__fletcher_munson__fletcher_munson__desktop_1200.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "loudness_compensation",
  "width": 1200.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main",
    "output"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "mode-selector",
    "ISO 226",
    "AUTO",
    "LOW",
    "MID",
    "HIGH"
  ],
  "overflow_group_ids": [],
  "config_controls": [],
  "main_groups": [
    {
      "id": "mode-selector",
      "title": "",
      "controls": [
        {
          "param_index": 11,
          "param_name": "Mode",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "id": "ISO 226",
      "title": "ISO 226",
      "controls": [
        {
          "param_index": 12,
          "param_name": "Playback Level",
          "control_type": "knob",
          "unit": "dB SPL",
          "range": [
            40.0,
            90.0
          ],
          "read_only": false
        },
        {
          "param_index": 13,
          "param_name": "Reference Level",
          "control_type": "knob",
          "unit": "dB SPL",
          "range": [
            60.0,
            100.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "id": "AUTO",
      "title": "AUTO",
      "controls": [
        {
          "param_index": 14,
          "param_name": "Playback Volume",
          "control_type": "label",
          "unit": "dB",
          "range": [
            -80.0,
            0.0
          ],
          "read_only": true
        },
        {
          "param_index": 13,
          "param_name": "Reference Level",
          "control_type": "knob",
          "unit": "dB SPL",
          "range": [
            60.0,
            100.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "id": "LOW",
      "title": "LOW",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Low Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            20.0,
            500.0
          ],
          "read_only": false
        },
        {
          "param_index": 1,
          "param_name": "Low Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -20.0,
            20.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "id": "MID",
      "title": "MID",
      "controls": [
        {
          "param_index": 4,
          "param_name": "Mid Enabled",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 5,
          "param_name": "Mid Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            500.0,
            8000.0
          ],
          "read_only": false
        },
        {
          "param_index": 6,
          "param_name": "Mid Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -20.0,
            20.0
          ],
          "read_only": false
        },
        {
          "param_index": 7,
          "param_name": "Mid Q",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.1,
            5.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "id": "HIGH",
      "title": "HIGH",
      "controls": [
        {
          "param_index": 2,
          "param_name": "High Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            2000.0,
            20000.0
          ],
          "read_only": false
        },
        {
          "param_index": 3,
          "param_name": "High Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -20.0,
            20.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [
    {
      "param_index": 8,
      "param_name": "Auto Gain",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 9,
      "param_name": "Max Auto Gain",
      "control_type": "knob",
      "unit": "dB",
      "range": [
        0.0,
        24.0
      ],
      "read_only": false
    },
    {
      "param_index": 10,
      "param_name": "Smoothing",
      "control_type": "knob",
      "unit": "ms",
      "range": [
        1.0,
        1000.0
      ],
      "read_only": false
    }
  ],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
